[gd_scene load_steps=23 format=3 uid="uid://chge42rd1wyii"]

[ext_resource type="Script" path="res://Scene/scene_1.gd" id="1_1x10g"]
[ext_resource type="PackedScene" uid="uid://b5pcatxix88rh" path="res://object/lid.tscn" id="1_wj2qr"]
[ext_resource type="Texture2D" uid="uid://vyyyex5mjs2r" path="res://graphics/ground/stones.png" id="2_1b227"]
[ext_resource type="PackedScene" uid="uid://dgym3eac8sbih" path="res://object/bed.tscn" id="2_dyun4"]
[ext_resource type="PackedScene" uid="uid://b03xi8vfy61wg" path="res://object/door.tscn" id="3_t43hl"]
[ext_resource type="Texture2D" uid="uid://d2v82abb34ac4" path="res://graphics/decals/dirt_patch.png" id="3_y1g2o"]
[ext_resource type="Texture2D" uid="uid://djkh05lqgvnhu" path="res://graphics/tilesets/soil.png" id="4_q8ecf"]
[ext_resource type="PackedScene" uid="uid://d2pvgqopb5l1y" path="res://object/light.tscn" id="4_ykch8"]
[ext_resource type="PackedScene" uid="uid://bt6ltdwh32oof" path="res://object/wall.tscn" id="5_fut5v"]
[ext_resource type="PackedScene" uid="uid://do3bur0sw71y8" path="res://player/player.tscn" id="6_wbbjg"]
[ext_resource type="PackedScene" uid="uid://cdg5nc0oaxu04" path="res://player/drone.tscn" id="7_k7q4v"]
[ext_resource type="Texture2D" uid="uid://bay0sbsax013a" path="res://graphics/tilesets/outside_walls.png" id="9_dlvvs"]
[ext_resource type="PackedScene" uid="uid://xjwoufglff3o" path="res://object/steam_vent.tscn" id="11_lyvo6"]
[ext_resource type="Texture2D" uid="uid://bx1sjll7xk01t" path="res://graphics/decals/moss/moss_1.png" id="11_uwgmj"]
[ext_resource type="Texture2D" uid="uid://dxpvnmuo4eqs4" path="res://graphics/decals/moss/moss_2.png" id="12_0i6m6"]
[ext_resource type="Texture2D" uid="uid://c1wgq18gjcvvx" path="res://graphics/decals/moss/moss_3.png" id="13_xc5he"]
[ext_resource type="Texture2D" uid="uid://cun35k4dmlwhm" path="res://graphics/decals/moss/moss_4.png" id="14_0p1c2"]
[ext_resource type="Texture2D" uid="uid://sgnsiyv7ucve" path="res://graphics/decals/moss/moss_5.png" id="15_ma1qn"]
[ext_resource type="PackedScene" uid="uid://b7anrgrtoy4wa" path="res://Scene/house.tscn" id="18_o3nnq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g6onc"]
resource_name = "walls"
texture = ExtResource("9_dlvvs")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-67.75, -65.5, 56.25, -64.5, 56.75, -60, 195, -59, 195, 59, 54.75, 59, 53.75, 65.5, -67.25, 62.5)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -59.4905, 195, -60.6129, 195, 60.6129, -195, 60.6129)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(67.909, 62.8579, -56.25, 64.5, -56.75, 60, -195, 59, -195, -59, -54.75, -59, -53.75, -65.5, 67.25, -66)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60.222, -64.2897, 62.8386, -63.311, 61.75, 56.5, 59.25, 59.5, 59, 195, -58.75, 195, -59.2299, 61.115, -61.2142, 61.115, -61.2142, 40.4787, -60.222, 40.2803)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62.7023, -65.0835, 59.5275, -65.0834, 59.0434, -60.1041, 195, -58.7338, 195, 60.1041, 59.7505, 59.397, 58.9323, 195, -58.75, 195, -59.3291, 80.5606, -61.3134, 80.5606, -61.3134, 41.6693)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(61.75, -65.5, 62.016, 58.368, 60.1041, 59.0434, 58.7338, 195, -60.1041, 195, -59.397, 59.7505, -195, 58.9323, -195, -58.75, -59.2099, -59.4905, -59.25, -65)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(59.4905, -195, 60.6129, 195, -60.6129, 195, -60.6129, -195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60.8936, 62.8579, -62.016, -58.368, -60.1041, -59.0434, -58.7338, -195, 60.1041, -195, 59.397, -59.7505, 195, -58.9323, 195, 58.75, 59.2099, 59.4905, 53.5976, 62.8579)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(62.7023, 65.0835, -59.5275, 65.0834, -59.0434, 60.1041, -195, 58.7338, -195, -60.1041, -59.7505, -59.397, -58.9323, -195, 58.75, -195, 59.3291, -80.5606, 61.3134, -80.5606, 61.3134, -41.6693)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(61.3134, 45.6378, -61.3134, 48.0189, -60.9165, -75.7984, -58.9323, -78.9732, -58.9323, -195, 58.75, -195, 59.3291, -80.5606, 61.3134, -80.5606, 61.3134, -41.6693)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8tq34"]
resource_name = "Soil"
texture = ExtResource("4_q8ecf")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_5yed4"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_g6onc")
sources/1 = SubResource("TileSetAtlasSource_8tq34")

[node name="Scene1" type="Node2D"]
script = ExtResource("1_1x10g")

[node name="Stones" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(-7343, 108)
scale = Vector2(0.872781, 0.911318)
texture = ExtResource("2_1b227")
region_enabled = true
region_rect = Rect2(-3577.25, -3053.15, 9857.5, 4051.93)
metadata/_edit_lock_ = true

[node name="House" parent="." instance=ExtResource("18_o3nnq")]
position = Vector2(-10502, 4024)
metadata/_edit_lock_ = true

[node name="Ground" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Soil" type="Sprite2D" parent="Ground"]
texture_repeat = 2
position = Vector2(-33.1745, 128.31)
scale = Vector2(1.03453, 1.14678)
texture = ExtResource("2_1b227")
region_enabled = true
region_rect = Rect2(-2081.17, -578.618, 6072.2, 3220.28)
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_5yed4")
format = 2
layer_0/name = "soil"
layer_0/tile_data = PackedInt32Array(196603, 1, 1, 196604, 65537, 1, 196605, 65537, 1, 196606, 65537, 1, 196607, 65537, 1, 131072, 65537, 1, 131074, 65537, 1, 131075, 65537, 1, 131076, 131073, 1, 196612, 131073, 2, 196611, 65537, 2, 196610, 65537, 2, 196609, 65537, 2, 196608, 65537, 2, 262143, 65537, 2, 262142, 65537, 2, 262141, 65537, 2, 262140, 65537, 2, 262139, 1, 2, 131068, 65537, 1, 65532, 65537, 1, -4, 65537, 1, -65540, 65537, 1, -65539, 65537, 1, -65538, 65537, 1, -65537, 65537, 1, -131072, 65537, 1, -131071, 65537, 1, -131070, 65537, 1, -131069, 65537, 1, -65533, 65537, 1, 3, 65537, 1, 65539, 65537, 1, -65534, 65537, 1, -65536, 65537, 1, -65535, 65537, 1, 65535, 65537, 1, 65534, 65537, 1, 131071, 65537, 1, -1, 65537, 1, -2, 65537, 1, -3, 65537, 1, 65533, 65537, 1, 131069, 65537, 1, 131070, 65537, 1, 65540, 131073, 1, 4, 131073, 1, -65532, 131073, 1, -131068, 131073, 1, -196604, 131073, 0, -196605, 65537, 0, -196606, 65537, 0, -196607, 65537, 0, -196608, 65537, 0, -131073, 65537, 0, -131074, 65537, 0, -131075, 65537, 0, -131076, 65537, 0, -131077, 1, 0, -65541, 1, 1, -5, 1, 1, 65531, 1, 1, 131067, 1, 1, 131073, 65537, 1)
layer_1/name = " walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(262140, 65536, 0, 262141, 65536, 0, 262142, 65536, 0, 262143, 65536, 0, 196608, 65536, 0, 196609, 65536, 0, 196610, 65536, 0, 196611, 65536, 0, 196612, 131072, 2, 131076, 0, 2, 65540, 0, 2, 4, 0, 2, -65532, 0, 2, -131068, 0, 2, -196604, 131072, 1, -196605, 65536, 0, -196606, 65536, 0, -196607, 65536, 0, -196608, 65536, 0, -131073, 65536, 0, -131074, 65536, 0, -131075, 65536, 0, -131076, 65536, 0, -131077, 65536, 1, 262139, 65536, 2, 196603, 0, 2, 131067, 0, 1, -5, 0, 3, -65541, 0, 2)
metadata/_edit_lock_ = true

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(1, 1, 0.768627, 1)
position = Vector2(-851, -420)
texture = ExtResource("3_y1g2o")
metadata/_edit_lock_ = true

[node name="Moss1" type="Sprite2D" parent="Ground"]
position = Vector2(-1408, 740)
texture = ExtResource("11_uwgmj")
metadata/_edit_lock_ = true

[node name="Moss2" type="Sprite2D" parent="Ground"]
position = Vector2(-742, 600)
texture = ExtResource("12_0i6m6")
metadata/_edit_lock_ = true

[node name="Moss3" type="Sprite2D" parent="Ground"]
position = Vector2(-1180, 429)
texture = ExtResource("13_xc5he")
metadata/_edit_lock_ = true

[node name="Moss4" type="Sprite2D" parent="Ground"]
position = Vector2(-338, 787)
texture = ExtResource("14_0p1c2")
metadata/_edit_lock_ = true

[node name="Moss5" type="Sprite2D" parent="Ground"]
position = Vector2(-526, 330)
texture = ExtResource("15_ma1qn")
metadata/_edit_lock_ = true

[node name="SteamVent" parent="Ground" instance=ExtResource("11_lyvo6")]
position = Vector2(-185, 181)
metadata/_edit_lock_ = true

[node name="Lid" parent="." instance=ExtResource("1_wj2qr")]
position = Vector2(909, 135)
metadata/_edit_lock_ = true

[node name="Bed" parent="." instance=ExtResource("2_dyun4")]
position = Vector2(949, 638)
metadata/_edit_lock_ = true

[node name="Door" parent="." instance=ExtResource("3_t43hl")]
position = Vector2(195, 10)
metadata/_edit_lock_ = true

[node name="Wall" parent="." instance=ExtResource("5_fut5v")]
position = Vector2(590, 27)
metadata/_edit_lock_ = true

[node name="StaticBody2D4" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(404, 0)

[node name="StaticBody2D5" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(0, 754)

[node name="StaticBody2D6" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(404, 754)

[node name="StaticBody2D7" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(-404, 754)

[node name="StaticBody2D8" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(-617, 579)
rotation = 1.5708

[node name="StaticBody2D9" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(-617, 175)
rotation = 1.5708

[node name="StaticBody2D10" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(633, 175)
rotation = 1.5708

[node name="StaticBody2D11" parent="Wall" instance=ExtResource("5_fut5v")]
position = Vector2(633, 579)
rotation = 1.5708

[node name="Player" parent="." instance=ExtResource("6_wbbjg")]
position = Vector2(208, 570)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="Light" parent="." instance=ExtResource("4_ykch8")]
position = Vector2(15, 412)
rotation = 4.71239
metadata/_edit_lock_ = true

[node name="drone" parent="." instance=ExtResource("7_k7q4v")]
position = Vector2(31, -512)

[node name="Projectiles" type="Node" parent="."]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
color = Color(0.572549, 0.572549, 0.572549, 1)
blend_mode = 1

[connection signal="player_entered" from="House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="House" to="." method="_on_house_player_exited"]
[connection signal="player_connected" from="Door" to="." method="_on_door_player_connected"]
[connection signal="grenade_input" from="Player" to="." method="_on_player_grenade_input"]
[connection signal="laser_input" from="Player" to="." method="_on_player_laser_input"]
